--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>TypeScript</title>
   <!-- <script src="dist/app.js" defer></script> -->
-  <script src="dist/generic.js" defer></script>
+  <script src="dist/decorators.js" defer></script>
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
+    <button class="btn" id="btn">Click here</button>
+    <div id="card"></div>
+  </div>
 </body>
 </html>
