--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>TypeScript</title>
   <!-- <script src="dist/app.js" defer></script> -->
-  <script src="dist/decorators.js" defer></script>
+  <script src="dist/namespaces.js" defer></script>
 </head>
 <body>
   <div class="container">
